# course6_hw_2

./: README.md  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixture/: groups.json  permissions.json
catalog/migrations/: 0004_blog.py  0005_alter_blog_options.py  0006_alter_blog_created_at_alter_blog_slug.py  0007_version.py  0008_alter_version_current_version_indicator.py  0009_product_creator.py  0010_alter_product_creator.py  0011_alter_blog_options_alter_product_options.py  0012_alter_product_options_product_is_published.py
catalog/templates/catalog_app/: base.html  blog.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  categories_list.html  contact.html  home.html  product_1.html  product_confirm_delete.html  product_form.html  version_confirm_delete.html  version_detail.html  version_form.html  version_list.html
catalog/templates/catalog_app/for_version/: version_detail.html  version_form.html
catalog/templates/catalog_app/includes/: inc_base.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: create_su.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users_app/: login.html  password_recovery_form.html  password_recovery_message.html  register_message.html  user_form.html
